--- a/curso-online/backend/.env.example
+++ b/curso-online/backend/.env.example
@@ -4,7 +4,8 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://db_user:db_password@db_host:db_port/db_name"
+DATABASE_URL=postgresql://db_user:db_password@db_host:db_port/db_name
 
-APP_NAME="backend"
-PORT="4000"
+APP_NAME=backend
+APP_PORT=8686
+APP_HOST=0.0.0.0
