--- a/curso-online/backend/package.json
+++ b/curso-online/backend/package.json
@@ -1,23 +1,28 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "Teste para candidatos à vaga de Desenvolvedor REACT PLENO",
+  "description": "",
   "main": "index.js",
   "directories": {
     "doc": "doc"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon --exec ts-node src/app.ts"
   },
   "author": "pedrohygorveras",
   "license": "MIT",
+  "dependencies": {
+    "express": "^4.18.2",
+    "dotenv": "^16.0.3",
+    "@prisma/client": "^5.10.2"
+  },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/node": "^20.11.19",
+    "@types/dotenv": "^8.2.0",
+    "nodemon": "^3.0.3",
     "prisma": "^5.10.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
-  },
-  "dependencies": {
-    "@prisma/client": "^5.10.2"
   }
 }
