--- a/curso-online/backend/package.json
+++ b/curso-online/backend/package.json
@@ -7,19 +7,23 @@
     "doc": "doc"
   },
   "scripts": {
-    "dev": "nodemon --exec ts-node src/app.ts"
+    "dev": "nodemon --exec ts-node src/app.ts",
+    "migrate": "npx prisma migrate dev"
   },
   "author": "pedrohygorveras",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
+    "@prisma/client": "^5.10.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "@prisma/client": "^5.10.2"
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.19",
-    "@types/dotenv": "^8.2.0",
     "nodemon": "^3.0.3",
     "prisma": "^5.10.2",
     "ts-node": "^10.9.2",
