--- a/curso-online/backend/.env.example
+++ b/curso-online/backend/.env.example
@@ -6,6 +6,7 @@
 
 DATABASE_URL=postgresql://db_user:db_password@db_host:db_port/db_name
 
+APP_VERSION=1.0.0
 APP_NAME=backend
 APP_PORT=8686
 APP_HOST=0.0.0.0
