--- a/curso-online/frontend/package.json
+++ b/curso-online/frontend/package.json
@@ -16,7 +16,8 @@
     "react": "^18",
     "react-daisyui": "^5.0.0",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "theme-change": "^2.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
