--- a/curso-online/backend/package.json
+++ b/curso-online/backend/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "dev": "nodemon --exec ts-node src/app.ts",
-    "migrate": "npx prisma migrate dev"
+    "migrate": "npx prisma migrate dev",
+    "test": "jest --forceExit"
   },
   "author": "pedrohygorveras",
   "license": "MIT",
@@ -20,12 +21,18 @@
     "express-validator": "^7.0.1"
   },
   "devDependencies": {
+    "@swc/core": "^1.4.2",
+    "@swc/jest": "^0.2.36",
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.11.19",
+    "@types/supertest": "^6.0.2",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.3",
     "prisma": "^5.10.2",
+    "supertest": "^6.3.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
